# ev-patent-analysis

./: .gitignore  CLAUDE.md  COMPREHENSIVE_REVIEW_FINDINGS.md  DATA_README.md  LITERATURE_REVIEW_2020-2025.md  README.md  _quarto.yml  export_pdf_workflow.sh  main.py  patent_analysis_chapter.ipynb  patent_analysis_chapter.py  patent_analysis_chapter_backup.py  patent_analysis_feedback_response.md  patent_analysis_paper.py  pyproject.toml  reviews.md
sql/: 01_global_context_5regions.sql  02_collaborative_patents.sql  03_patent_quality_citations.sql  04_sensitivity_analysis_exclude_utility.sql  05_technology_lifecycle_scurves.sql  06_generality_originality_indices.sql  07_knowledge_flow_networks.sql
